[tool.poetry]
name = "oop-skypro"
version = "0.1.0"
description = "Learning OOP"
authors = ["Doniyor <donish1979@gmail.com>"]
license = "All rights reserved."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
strict_optional = true
exclude = "(.venv)"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = "(.git)"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
